Use the same code as in the fopen.c sample from libcurl (XERCESC-1756)

git-svn-id: https://svn.apache.org/repos/asf/xerces/c/trunk@614270 13f79535-47bb-0310-9956-ffa450edef68